# AvgLib

./: .gitignore  AvgLibexe  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  avgLib  cmake_install.cmake  install  install.sh  install_win.bat  main.cpp  makefile  test  testFile.p
include/: File.h
include/avg/: Debug.h  File.h
include/avg/Random/: PerlinNoise.h  PermutationTable.h
lib/: ContentPipeline.cpp  ContentPipeline.h  Debug.h  File.cpp  File.h  Info.h  PerlinNoise.cpp  PerlinNoise.h  PermutationTable.cpp  String.cpp  String.h
lib/Math/: float2.h  float3.h  float4.h  int2.h  int3.h  int4.h  vector.cpp  vector.h
lib/Random/: PerlinNoise.cpp  VoronoiNoise.cpp  VoronoiNoise.h
src/: File.cpp  PerlinNoise.cpp  PerlinNoise.h  String.cpp  String.h  StringLib.cpp  main.cpp
src/Math/: vector.cpp
src/Random/: PerlinNoise.cpp  PermutationTable.cpp
